# ChangeLog for app-cdr/k3b
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.70 2004/08/14 13:23:42 swegener Exp $

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed CVS Header.

*k3b-0.11.14 (10 Aug 2004)

  10 Aug 2004; Carsten Lohrke <carlo@gentoo.org> +k3b-0.11.14.ebuild:
  version bump

  06 Aug 2004; Carsten Lohrke <carlo@gentoo.org> k3b-0.11.13.ebuild:
  readded $(use_with arts), since kde.eclass supports it only for kde 3.3 and
  above

*k3b-0.11.13 (05 Aug 2004)

  05 Aug 2004; Carsten Lohrke <carlo@gentoo.org> +k3b-0.11.13.ebuild:
  version bump, replaced a few for loops,
  removed monkeyaudio plugin until license issues are sorted out

  22 Jul 2004; Travis Tilley <lv@gentoo.org> k3b-0.11.12-r1.ebuild:
  stable on amd64

  17 Jul 2004; Heinrich Wendel <lanius@gentoo.org> k3b-0.11.12-r1.ebuild:
  stable on x86

  04 Jul 2004; Carsten Lohrke <carlo@gentoo.org> k3b-0.11.10.ebuild,
  k3b-0.11.12-r1.ebuild:
  QA: need-kde after R/DEPEND

*k3b-0.11.12-r1 (03 Jul 2004)

  03 Jul 2004; Heinrich Wendel <lanius@gentoo.org> k3b-0.11.11.ebuild,
  k3b-0.11.12-r1.ebuild, k3b-0.11.12.ebuild, k3b-0.11.6.ebuild,
  k3b-0.11.9.ebuild:
  add icon for gnome, bug #55272, remove old versions, add arts useflag

*k3b-0.11.12 (25 Jun 2004)

  25 Jun 2004; Carsten Lohrke <carlo@gentoo.org> +k3b-0.11.12.ebuild:
  version bump

  24 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> k3b-0.11.10.ebuild:
  Marked stable on amd64.

  16 Jun 2004; Martin Holzer <mholzer@gentoo.org> k3b-0.11.10.ebuild:
  need a newer version of kde

*k3b-0.11.11 (15 Jun 2004)

  15 Jun 2004; Carsten Lohrke <carlo@gentoo.org> k3b-0.11.11.ebuild:
  version bump, <media-video/transcode-0.6.12

  11 Jun 2004; Lars Weiler <pylon@gentoo.org> k3b-0.11.10.ebuild:
  Stable on ppc.

  05 Jun 2004; Heinrich Wendel <lanius@gentoo.org> k3b-0.11.10.ebuild:
  stable on x86
