@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/Attic/k3b-0.11.10.ebuild,v 1.9 2004/07/03 22:03:01 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/Attic/k3b-0.11.10.ebuild,v 1.10 2004/08/21 06:05:32 pylon Exp $
 
 inherit kde
 
@@ -21,7 +21,7 @@ DEPEND="kde? ( >=kde-base/kdebase-3.2.2 )
 	oggvorbis? ( media-libs/libvorbis )"
 
 RDEPEND="${DEPEND}
-	>=app-cdr/cdrtools-1.11
+	virtual/cdrtools
 	>=app-cdr/cdrdao-1.1.7-r3
 	media-sound/normalize
 	dvdr? ( app-cdr/dvd+rw-tools )
