@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/k3b
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.70 2004/08/14 13:23:42 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.71 2004/08/21 06:05:32 pylon Exp $
+
+  21 Aug 2004; Lars Weiler <pylon@gentoo.org> k3b-0.11.10.ebuild,
+  k3b-0.11.12-r1.ebuild, k3b-0.11.13.ebuild, k3b-0.11.14.ebuild:
+  Depend on virtual/cdrtools, as mentioned in bug 61094.
 
   14 Aug 2004; Sven Wegener <swegener@gentoo.org> :
   Fixed CVS Header.
